--- a/index.html
+++ b/index.html
@@ -725,8 +725,10 @@
                 text: "Se perderán los datos ingresados",
                 icon: 'warning',
                 showCancelButton: true,
-                confirmButtonColor: '#1a1a1a',
-                cancelButtonColor: '#d33',
+                // Confirm = Sí, cancelar -> mostrar en rojo
+                confirmButtonColor: '#dc2626',
+                // Cancel = No, continuar -> mostrar en verde
+                cancelButtonColor: '#16a34a',
                 confirmButtonText: 'Sí, cancelar',
                 cancelButtonText: 'No, continuar'
             }).then((result) => {
@@ -1651,4 +1653,3 @@
     </script>
 </body>
 </html>
-
