--- a/index.html
+++ b/index.html
@@ -664,6 +664,24 @@
     </main>
 
     <script>
+        // Require login: si no hay usuario logueado, redirigir a login
+        (function ensureLogin(){
+            try {
+                const current = JSON.parse(localStorage.getItem('currentUser') || 'null');
+                if (!current) {
+                    window.location.href = 'login.html';
+                    return;
+                }
+                // Mostrar email en navbar si existe el elemento
+                document.addEventListener('DOMContentLoaded', () => {
+                    const el = document.getElementById('currentUserEmail');
+                    if (el) el.textContent = current.email;
+                });
+            } catch(e) {
+                console.error('Auth check error', e);
+            }
+        })();
+
         // Funciones de localStorage
         function loadInvoices() {
             const stored = localStorage.getItem('invoices');
@@ -1102,9 +1120,9 @@
                     
                     <div class="flex justify-between items-end">
                         <span class="text-2xl font-bold text-gray-900">$${inv.amount.toFixed(2)}</span>
-                        <div class="flex items-center gap-2">
-                            <span class="text-xs text-gray-400">${formatDate(inv.date)}</span>
-                            <span class="status-badge ${statusClass}">${statusText}</span>
+                        <div class="flex items-center gap-6">
+                        <span id="currentUserEmail" class="text-sm" style="color: var(--text-secondary);"></span>
+                        <button onclick="logout()" class="text-sm flex items-center gap-2 transition-colors" style="color: var(--text-secondary); hover: var(--text-primary);">
                         </div>
                     </div>
                 </div>
@@ -1619,6 +1637,9 @@
                         timer: 1500,
                         showConfirmButton: false
                     });
+                    // Limpiar sesión y redirigir al login
+                    localStorage.removeItem('currentUser');
+                    setTimeout(() => { window.location.href = 'login.html'; }, 600);
                 }
             });
         }
