--- a/index.html
+++ b/index.html
@@ -1101,6 +1101,12 @@
                 
                 return `
                 <div class="invoice-card bg-white border border-gray-200 rounded-lg p-5 relative">
+                    <div style="position:absolute;left:16px;top:16px;">
+                        <span class="status-badge ${statusClass}">${statusText}</span>
+                    </div>
+                    <div style="position:absolute;left:16px;top:16px;">
+                        <span class="status-badge ${statusClass}">${statusText}</span>
+                    </div>
                     <div class="flex justify-end gap-3 mb-2">
                         <button onclick="viewInvoice(${inv.id})" class="text-gray-400 hover:text-gray-600 transition-colors" title="Ver">
                             <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"></path><circle cx="12" cy="12" r="3"></circle></svg>
